Fix spacing

--- a/src/app/shared/components/template/components/button/button.component.scss
+++ b/src/app/shared/components/template/components/button/button.component.scss
@@ -14,8 +14,8 @@ ion-button {
   color: var(--ion-color-primary-contrast);
   text-transform: none;
   white-space: pre-line;
-  min-height: 65px;
-  padding: var(--regular-padding);
+  min-height: 71px;
+  padding: var(--regular-margin) var(--regular-padding) 0;
   --border-radius: 15px;
   --box-shadow: var(--ion-btn-dark-box-shadow);
   display: flex;
