--- a/src/app/shared/components/template/components/tmpl-components-common.scss
+++ b/src/app/shared/components/template/components/tmpl-components-common.scss
@@ -137,8 +137,7 @@ p {
 .title-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: var(--regular-margin);
-  margin-top: var(--regular-margin);
+  margin-top: var(--large-margin);
   h1 {
     margin: 0;
     line-height: 29px;
